# hs-uci

./: .gitignore  README.md  uci.cabal
src/Data/: UCI.hs
